# goda_wb

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  skill.md
.github/workflows/: ci.yml
sample/: check_core.py  check_goda.py  check_shuto.py  draw_on_image.py  draw_on_image2.py  run.py
src/goda_wb/: __init__.py  constant.py  core.py
test/: test_core.py
