[project]
name = "goda-wb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tlasu", email = "sukazuki.mail@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "ruff>=0.14.6",
    "scipy>=1.16.3",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.0",
]
