[project]
name = "goda-wb"
version = "0.1.0"
description = "合田の砕波変形モデル（Goda's breaking wave deformation model）の Python 実装"
readme = "README.md"
license = "MIT"
authors = [
    { name = "tlasu", email = "sukazuki.mail@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.8",
    "pytest>=9.0.0",
    "ruff>=0.14.9",
    "scipy>=1.16.3",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"test/**" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["test"]
